@@ -1,0 +1,2 @@
+class Binary < ActiveRecord::Base
+end
